# Gravity

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  default.nix
src/: camera.c  camera.h  defines.h  fragment.glsl  main.c  mesh.c  mesh.h  physics.c  physics.h  renderer.c  renderer.h  resource_manager.c  resource_manager.h  shader.c  shader.h  sphere.c  sphere.h  texture.c  texture.h  utility.c  utility.h  vertex.glsl  vertices.h
src/context/: context.c  context.h
src/core/: defines.h  graphics.h  time.c  time.h  utility.c  utility.h
src/game/: game.c  game.h  input.c  input.h  main.c  window.c  window.h
src/grid/: grid.c  grid.h
src/physics/: physics.c  physics.h
src/renderer/: camera.c  context.h  hud.c  hud.h  renderer.c  renderer.h  text.c  text.h
src/resources/: font.c  font.h  mesh.c  mesh.h  resource_manager.c  resource_manager.h  shader.c  shader.h  sphere.c  sphere.h  texture.c  texture.h
src/shaders/: base.frag  base.vert  fragment.glsl  grid.frag  grid.vert  text.frag  text.vert
